# cachearoo-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: cachearoo-config.cmake.in  fix-websocketpp.cmake
examples/: CMakeLists.txt  basic_example.cc  competing_consumers_example.cc  listener_api_test.cc  request_reply_example.cc
include/: cachearoo.h  cachearoo_client.h  cachearoo_connection.h  cachearoo_messaging.h  cachearoo_types.h
src/: cachearoo_client.cc  cachearoo_connection.cc  cachearoo_messaging.cc
tests/: CMakeLists.txt  test_connection_mock.cc  test_settings.cc  test_types.cc
