add_executable(basic_example basic_example.cc)
target_link_libraries(basic_example cachearoo)
target_compile_definitions(basic_example PRIVATE ASIO_STANDALONE _WEBSOCKETPP_CPP11_RANDOM_DEVICE_ _WEBSOCKETPP_CPP11_TYPE_TRAITS_)
if(MSVC)
    target_compile_options(basic_example PRIVATE /wd4127 /wd4244 /wd4267)
endif()

add_executable(request_reply_example request_reply_example.cc)
target_link_libraries(request_reply_example cachearoo)
target_compile_definitions(request_reply_example PRIVATE ASIO_STANDALONE _WEBSOCKETPP_CPP11_RANDOM_DEVICE_ _WEBSOCKETPP_CPP11_TYPE_TRAITS_)
if(MSVC)
    target_compile_options(request_reply_example PRIVATE /wd4127 /wd4244 /wd4267)
endif()

add_executable(competing_consumers_example competing_consumers_example.cc)
target_link_libraries(competing_consumers_example cachearoo)
target_compile_definitions(competing_consumers_example PRIVATE ASIO_STANDALONE _WEBSOCKETPP_CPP11_RANDOM_DEVICE_ _WEBSOCKETPP_CPP11_TYPE_TRAITS_)
if(MSVC)
    target_compile_options(competing_consumers_example PRIVATE /wd4127 /wd4244 /wd4267)
endif()